--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
-    <title>Acme Product Management</title>
+    <base href="/">
+    <title>MEA2N</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="app/app.component.css" rel="stylesheet" />
+    <link href="app/assets/styles/bootfly.css" rel="stylesheet" />
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
@@ -18,6 +20,9 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
+    <script src="node_modules/angular2/bundles/router.dev.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
