add register form

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>MEA2N</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <!--<link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />-->
+    <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" />
-    
+    <!--<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" />-->    
     <!--<link href="app/assets/styles/bootfly.css" rel="stylesheet" />-->
     <link href="app/assets/styles/main.css" rel="stylesheet" />
 
